Finish pizza task BE add kafka and new topics, add new rest , add kafka folder and temp folder
