# PizzaTaskOrderMS/src/main/java/com/amdocs/pizzataskms/model/DeliverySaveOrder.java
@@ -1,0 +1,11 @@
+package com.amdocs.pizzataskms.model;
+
+import lombok.Data;
+
+@Data
+public class DeliverySaveOrder {
+
+	private String orderStatus;
+	private String orderId;
+	
+}
