# PizzaTaskOrderMS/src/main/java/com/amdocs/pizzataskms/model/GetOrderStatus.java
@@ -1,0 +1,9 @@
+package com.amdocs.pizzataskms.model;
+
+import lombok.Data;
+
+@Data
+public class GetOrderStatus {
+	private String orderIdNumber;
+	private String orderIdStatus;
+}
